2010-10-18  Ramon Novoa  <rnovoa@artica.es>

	* extras/pandoradb_migrate_v3.1_to_v3.2.sql: Added support for recon scripts.

2010-10-16  Sancho Lerena <slerena@artica.es>

	* DEBIAN/control: Removed apache and apache php mod from deps, giving
	user chance to use another HTTP server.

    * pandoradb_migrate_v3.1_to_v3.2.sql: Variable for SQL custom reports has
    more size now (custom SQL reports could be huge SQL sentences).

    * godmode/reporting/reporting_builder.php, 
    godmode/reporting/reporting_builder.item_editor.php: Added suppor for the 
    new SQL graph reports (vbar, hbar and pie).

    * include/fgraph.php: Support for new SQL graphs, with new function 
    graph_custom_sql_graph().

    * include/functions_reporting.php:  Support for new SQL graphs.

    * operation/reporting/reporting_xml.php: Fixed some problems and added
    support for graphs using session_id.

2010-10-15  Ramon Novoa  <rnovoa@artica.es>

	* pandoradb.sql: Added support for recon scripts.

2010-10-15  Sergio Martin <sergio.martin@artica.es>

	* godmode/alerts/alert_list.list.php: Improved the size of the
	alert view columns

2010-10-15  Sergio Martin <sergio.martin@artica.es>

	* godmode/alerts/alert_list.list.php
	godmode/alerts/alert_list.builder.php: Fixed the ugly layout of 
	the alert views

2010-10-15  Miguel de Dios  <miguel.dedios@artica.es>
	
	* godmode/agentes/module_manager_editor_network.php: added lines to unblock
	SNMP community when the module is adopt.

2010-10-14  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/ver_agente.php: Safe output the list of
	modules from an agent in the ajax control

2010-10-14  Sergio Martin <sergio.martin@artica.es>

	* include/functions_modules.php
	godmode/agentes/module_manager.php
	godmode/agentes/configurar_agente.php: Added clone module
	into an agent to the manage modules view

2010-10-14  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/exportdata.php: Safe output the autocomplete